crates/ic-lint/tests/snapshots/keywords__integer_type_keywords.snap
---
source: crates/ic-lint/tests/keywords.rs
expression: test_lint(source)
---
⨯ keywords: `int8` is a keyword and may not be used as an identifier
  @ test.idl:3:10

 2 │ struct IntTypes {
 3 │     long int8;              // 'int8' is a keyword
   │          ˆˆˆˆ this is an IDL keyword
 4 │     long int16;             // 'int16' is a keyword
 5 │     long int32;             // 'int32' is a keyword

  ? the keyword can be escaped by changing to `_int8`
  * keywords are matched case-insensitively against identifiers

⨯ keywords: `int16` is a keyword and may not be used as an identifier
  @ test.idl:4:10

 2 │ struct IntTypes {
 3 │     long int8;              // 'int8' is a keyword
 4 │     long int16;             // 'int16' is a keyword
   │          ˆˆˆˆˆ this is an IDL keyword
 5 │     long int32;             // 'int32' is a keyword
 6 │     long int64;             // 'int64' is a keyword

  ? the keyword can be escaped by changing to `_int16`
  * keywords are matched case-insensitively against identifiers

⨯ keywords: `int32` is a keyword and may not be used as an identifier
  @ test.idl:5:10

 3 │ long int8;              // 'int8' is a keyword
 4 │ long int16;             // 'int16' is a keyword
 5 │ long int32;             // 'int32' is a keyword
   │      ˆˆˆˆˆ this is an IDL keyword
 6 │ long int64;             // 'int64' is a keyword
 7 │ unsigned long uint8;    // 'uint8' is a keyword

  ? the keyword can be escaped by changing to `_int32`
  * keywords are matched case-insensitively against identifiers

⨯ keywords: `int64` is a keyword and may not be used as an identifier
  @ test.idl:6:10

 4 │ long int16;             // 'int16' is a keyword
 5 │ long int32;             // 'int32' is a keyword
 6 │ long int64;             // 'int64' is a keyword
   │      ˆˆˆˆˆ this is an IDL keyword
 7 │ unsigned long uint8;    // 'uint8' is a keyword
 8 │ unsigned long uint16;   // 'uint16' is a keyword

  ? the keyword can be escaped by changing to `_int64`
  * keywords are matched case-insensitively against identifiers

⨯ keywords: `uint8` is a keyword and may not be used as an identifier
  @ test.idl:7:19

 5 │ long int32;             // 'int32' is a keyword
 6 │ long int64;             // 'int64' is a keyword
 7 │ unsigned long uint8;    // 'uint8' is a keyword
   │               ˆˆˆˆˆ this is an IDL keyword
 8 │ unsigned long uint16;   // 'uint16' is a keyword
 9 │ unsigned long uint32;   // 'uint32' is a keyword

  ? the keyword can be escaped by changing to `_uint8`
  * keywords are matched case-insensitively against identifiers

⨯ keywords: `uint16` is a keyword and may not be used as an identifier
  @ test.idl:8:19

  6 │ long int64;             // 'int64' is a keyword
  7 │ unsigned long uint8;    // 'uint8' is a keyword
  8 │ unsigned long uint16;   // 'uint16' is a keyword
    │               ˆˆˆˆˆˆ this is an IDL keyword
  9 │ unsigned long uint32;   // 'uint32' is a keyword
 10 │ unsigned long uint64;   // 'uint64' is a keyword

  ? the keyword can be escaped by changing to `_uint16`
  * keywords are matched case-insensitively against identifiers

⨯ keywords: `uint32` is a keyword and may not be used as an identifier
  @ test.idl:9:19

  7 │     unsigned long uint8;    // 'uint8' is a keyword
  8 │     unsigned long uint16;   // 'uint16' is a keyword
  9 │     unsigned long uint32;   // 'uint32' is a keyword
    │                   ˆˆˆˆˆˆ this is an IDL keyword
 10 │     unsigned long uint64;   // 'uint64' is a keyword
 11 │ };

  ? the keyword can be escaped by changing to `_uint32`
  * keywords are matched case-insensitively against identifiers

⨯ keywords: `uint64` is a keyword and may not be used as an identifier
  @ test.idl:10:19

  8 │     unsigned long uint16;   // 'uint16' is a keyword
  9 │     unsigned long uint32;   // 'uint32' is a keyword
 10 │     unsigned long uint64;   // 'uint64' is a keyword
    │                   ˆˆˆˆˆˆ this is an IDL keyword
 11 │ };

  ? the keyword can be escaped by changing to `_uint64`
  * keywords are matched case-insensitively against identifiers
