crates/ic-lint/tests/snapshots/keywords__keyword_as_bitset_name.snap
---
source: crates/ic-lint/tests/keywords.rs
expression: test_lint(source)
---
error[keywords]: `uint64` is a keyword and may not be used as an identifier
   ┌ test.idl:2:8
   │
 2 │ bitset uint64 {
   ·        ^^^^^^ this is an IDL keyword
   └──
 help: the keyword can be escaped by changing to `_uint64`

warning[items]: bitsets are not supported
   ┌ test.idl:2:8
   │
 2 │ bitset uint64 {
   ·        ^^^^^^ defined here
   └──
 note: the bitset will be skipped during codegen
