crates/ic-lint/tests/snapshots/keywords__keyword_as_const_name.snap
---
source: crates/ic-lint/tests/keywords.rs
expression: test_lint(source)
---
⨯ keywords: `abstract` is a keyword and may not be used as an identifier
  @ test.idl:1:15

 1 │ const boolean abstract = TRUE;
   │               ˆˆˆˆˆˆˆˆ this is an IDL keyword

  ? the keyword can be escaped by changing to `_abstract`
  * keywords are matched case-insensitively against identifiers
