crates/ic-lint/tests/snapshots/keywords__keyword_as_exception_name.snap
---
source: crates/ic-lint/tests/keywords.rs
expression: test_lint(source)
---
error[keywords]: `uint16` is a keyword and may not be used as an identifier
   ┌ test.idl:2:11
   │
 2 │ exception uint16 {
   ·           ^^^^^^ this is an IDL keyword
   └──
 help: the keyword can be escaped by changing to `_uint16`
