crates/ic-lint/tests/snapshots/keywords__keyword_as_field_name.snap
---
source: crates/ic-lint/tests/keywords.rs
expression: test_lint(source)
---
error[keywords]: `octet` is a keyword and may not be used as an identifier
   ┌ test.idl:3:11
   │
 2 │ struct Data {
 3 │     octet octet;
   ·           ^^^^^ this is an IDL keyword
 4 │     int32 int32;
 5 │     uint64 uint64;
   └──
 help: the keyword can be escaped by changing to `_octet`
 note: keywords are matched case-insensitively against identifiers

error[keywords]: `int32` is a keyword and may not be used as an identifier
   ┌ test.idl:4:11
   │
 2 │ struct Data {
 3 │     octet octet;
 4 │     int32 int32;
   ·           ^^^^^ this is an IDL keyword
 5 │     uint64 uint64;
 6 │ };
   └──
 help: the keyword can be escaped by changing to `_int32`
 note: keywords are matched case-insensitively against identifiers

error[keywords]: `uint64` is a keyword and may not be used as an identifier
   ┌ test.idl:5:12
   │
 3 │     octet octet;
 4 │     int32 int32;
 5 │     uint64 uint64;
   ·            ^^^^^^ this is an IDL keyword
 6 │ };
   └──
 help: the keyword can be escaped by changing to `_uint64`
 note: keywords are matched case-insensitively against identifiers
