crates/ic-lint/tests/snapshots/keywords__keyword_as_interface_name.snap
---
source: crates/ic-lint/tests/keywords.rs
expression: test_lint(source)
---
error[keywords]: `abstract` is a keyword and may not be used as an identifier
   ┌ test.idl:2:11
   │
 2 │ interface abstract {
   ·           ^^^^^^^^ this is an IDL keyword
   └──
 help: the keyword can be escaped by changing to `_abstract`
